# sqlite-amalgamation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  feature_list.lst  monolithic_examples.h  monolithic_main.c  regenerate-sourcecode.sh  shell.c  sqlite3-1.c  sqlite3-2.c  sqlite3-3.c  sqlite3-4.c  sqlite3-5.c  sqlite3-6.c  sqlite3-7.c  sqlite3-8.c  sqlite3-all.c  sqlite3.h  sqlite3_config.h  sqlite3_config.h.in  sqlite3_extensions.h  sqlite3_extensions1.c  sqlite3_extensions2.c  sqlite3_extensions3.1.c  sqlite3_extensions3.2.c  sqlite3_extensions3.c  sqlite3_extensions4.c  sqlite3_extensions5.c  sqlite3_extensions6.c  sqlite3_extensions7.c  sqlite3_extensions8.c  sqlite3_tools1.c  sqlite3_tools2.c  sqlite3ext.h  sqlite3session.h  sqliteInt.h  sqlite_cfg.h  sqlite_features_config.h  sqlite_features_config.h.in  (+2 more)
